--- a/field_set_tag.html
+++ b/field_set_tag.html
@@ -1,6 +1,3 @@
-<!-- form is used to collect user input . the user input can then be sent to a server for processing  -->
-
-<!-- note: open tag must be end '/' that don't make error when google scroll it   for instance: <br/>  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,29 +7,23 @@
     <title>FORM</title>
 </head>
 <body>
-        <!-- html_5 form attributes 1.required 2.placeholder 3.autofocus  4.checked="" 5.readonly   6.disabled  7.min 
-            8.max 9.default_value  10.max_length-->
     <form action="">
         <fieldset>
+            <!-- legend is used to write something on the form border -->
             <legend>Enquiry</legend>
-        Name: <input type="text" name="name" id="" placeholder="please enter you name" required=""  autofocus="" value="pakistan"  readonly=""  disabled="false"><br/><br/>
+        Name: <input type="text" name="name" id="" placeholder="please enter you name "><br/><br/>
         <!-- each form field's name attribute is used to identify the data associated with that field when it's sent to the server.  -->
         Email: <input type="text" name="email" placeholder="please enter your Gmail ID "><br><br>
-        <br><br>
-        Age:
-        <!-- set max 20 integer value -->
-        <input type="number" name="age" id="" min="1" max="20"> <br/><br>
         Message:
-        <textarea name="message" id=""  rows="2" ></textarea> <br><br>
+        <textarea name="message" id=""  rows="2"></textarea> <br><br>
         <!-- the name attribute must be same of radio buttons otherwise doesn't work -->
         Gender:
         <input type="radio" value="f" name="female"/> female 
-        <input type="radio" value="f" name="female" checked=""/> male
+        <input type="radio" value="f" name="female"/> male
         <br><br>
         Hobbies:
         <!-- the name attribute must be same for multiple checkboxes and put the  square bracket -->
-        <!-- checked="" : by default the data scientist is checked -->
-        <input type="checkbox" name="Hobbies[]"  checked=""/>Data Scientist
+        <input type="checkbox" name="Hobbies[]"/>Data Scientist
         <input type="checkbox" name="Hobbies[]"/>Software Engineer
         <input type="checkbox" name="Hobbies[]"/>Grapic Designer
         <br><br>
@@ -49,10 +40,10 @@
             </optgroup>
             <option>afghanistan</option>
         </select>
-       <br><br>
+        <br><br>
         <input type="submit" value="Send">
         <input type="reset" value="Reset">
-        </fieldset>
+    </fieldset>    
     </form>
 </body>
 </html>
