the div tag full implementation

--- a/Div_tage.html
+++ b/Div_tage.html
@@ -12,10 +12,8 @@
     like (text,images,header,footer,navigation baar etc) 
     div tag always take the horizantal row not 
     note: div tag always work with the css -->
-
-
     <div class="main"> <!-- Main div -->
-        <div id="parent-row-1"> <!-- parent row_! -->
+        <div id="parent_row-1"> <!-- parent row_! -->
             <div class="col_1"> <!-- col_1 -->
             hangu
             </div>
