--- a/Home/position.htm
+++ b/Home/position.htm
@@ -8,6 +8,7 @@
             border: 2px solid red;
             float: left;
             text-align: center;
+            background-color: yellow;
 
         }
         .col2{
@@ -17,8 +18,9 @@
            float: left;
            /* position:absolute: move to his parent tag */
            position:absolute;
-           top: 100px;
+           left: 200px;
            text-align: center;
+           background-color: rgb(236, 149, 149);
         }
         .col3{
             width: 400px;
@@ -26,11 +28,12 @@
             border: 2px solid red;
             float: left;
             text-align: center;
+            background-color: royalblue ;
         }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>position property of css </title>
+    <title>position absolute cosider the whole body as a parent </title>
 </head>
 <body>
     <div class="col1">
