--- a/form.html
+++ b/form.html
@@ -12,6 +12,8 @@
 <body>
         <!-- html_5 form attributes 1.required 2.placeholder 3.autofocus  4.checked="" 5.readonly   6.disabled  7.min 
             8.max 9.default_value  10.max_length-->
+            <!-- it's correct to use the "GET" method for retrieving data from the server and the "POST"
+             method for submitting data to the server in web applications -->
     <form action="">
         <fieldset>
             <legend>Enquiry</legend>
