ids , classes and Emmet are described

--- a/complete web developement bootcamp/form.html
+++ b/complete web developement bootcamp/form.html
@@ -8,6 +8,7 @@
     <!-- note: don't user br  this worK should done by CSS -->
 </head>
 <body>
+    <!-- the name attribute is used to specify the names of the input fields. When the form is submitted, -->
     <form action="backend.php">
         <div>
             <!-- for="value" : for value must be the id value -->
