CSS transition covered

--- a/complete web developement bootcamp/CSS/transition.html
+++ b/complete web developement bootcamp/CSS/transition.html
@@ -39,6 +39,7 @@
     </style>
 </head>
 <body>
+    <!--  They allow you to add effects to your web pages without using JavaScript or Flash -->
     <h3> This is CSS Transition toturial</h3>
     <div class="container">
         <div id="box">
